# llm

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  ui.py
backend/: gpt_client.py  local_client.py
tests/: test_gpt_client.py
