[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Pawel Maliszewski <psmaliszewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
gradio = "^4.26.0"
black = "^24.3.0"
openai = "^1.16.2"
transformers = "^4.39.3"
torch = "2.0.0"
huggingface-hub = {extras = ["cli"], version = "^0.22.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
